--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "cert-parser",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "cert-parser.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node cert-parser.js",
+    "pkg": "pkg cert-parser.js -t node14-macos-x64,node14-win-x64 --out-path ./bin"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
     "fs-readdir-recursive": "^1.1.0",
     "objects-to-csv": "^1.3.6",
     "xlsx": "^0.16.9"
