--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "csv-parser": "^3.0.0",
     "fs-readdir-recursive": "^1.1.0",
     "objects-to-csv": "^1.3.6",
     "xlsx": "^0.16.9"
